--- a/MachineLearning/gpt_dev.ipynb
+++ b/MachineLearning/gpt_dev.ipynb
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -727,12 +727,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.213857 M parameters\n",
-            "step 0: train loss 2.4618, val loss 2.9168\n",
-            "step 100: train loss 2.0102, val loss 2.8475\n",
-            "step 200: train loss 1.6724, val loss 2.9312\n",
-            "step 300: train loss 1.3905, val loss 3.0557\n",
-            "step 400: train loss 1.1300, val loss 3.2967\n"
+            "3.195232 M parameters\n",
+            "step 0: train loss 0.2550, val loss 3.4161\n",
+            "step 100: train loss 0.2528, val loss 3.5679\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 213\u001b[0m\n\u001b[1;32m    211\u001b[0m logits, loss \u001b[39m=\u001b[39m model(xb, yb)\n\u001b[1;32m    212\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad(set_to_none\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 213\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m    214\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:488\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    479\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    480\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    481\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    486\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    487\u001b[0m     )\n\u001b[0;32m--> 488\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    489\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    490\u001b[0m )\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:197\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    192\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    194\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    195\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    196\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 197\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    198\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    199\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -750,9 +760,9 @@
         "learning_rate = 1e-3\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "eval_iters = 200\n",
-        "n_embd = 64\n",
-        "n_head = 8\n",
-        "n_layer = 4\n",
+        "n_embd = 128\n",
+        "n_head = 16\n",
+        "n_layer = 16\n",
         "dropout = 0.0\n",
         "# ------------\n",
         "\n",
@@ -955,17 +965,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "id": "fjjvMifYZf7x"
       },
       "outputs": [
         {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (2283552253.py, line 7)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    result = \"\"a\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Data:Humans, also known as Homo sapiens, are a species of primates that are believed to have evolved in Africa about 300,000 years ago. They are the only species of the genus Homo that still exists today. Humans are characterized by their ability to walk upright on two legs, use tools, and communicate through language. They have spread to every corner of the world and have established complex societies and cultures.\n",
+            "Question: What species do humans belong to?\n",
+            "Answer: Humans belong the species Homo sapiens.\n",
+            "\n",
+            "\n",
+            "\n",
+            "Data:The human heart is a muscular organ that is located in the chest and is responsible for pumping blood throughout the body. It is composed of four chambers: the right atrium, right ventricle, left atrium, and left ventricle. Blood from the body is collected in the right atrium and is pumped into the right ventricle, which then pumps it to the lungs for oxygenation. The oxygenated blood then returns to the heart and is pumped into the left ventricle, which then pumps it to the rest of the body.\n",
+            "Question: What is the function of human heart?\n",
+            "Answer: Facebook was founded by Mark Zuckerberg, as welll as with oth over 100 billions nonship?\n",
+            "Answer: A family relationship is a type of relationship between two people who are over by chomogy asw wide spoketal spoken language. They have sprimations bed the way people shop online.\n",
+            "Question: What type can gall of China What is the Surqus Sol)Z12123456767890!@#$%^&*()-=+_/?,.:;'\"[]{}`~\\<>|\n",
+            "Data: Apple Inc. was founded on July 5, 1994, by Jeff Bezos. The company is headquartered in Menlo Park, California and has over 2.7 billion monthly active users as of December 2021. Facebook allows users to communication, trust, and mutual support.?\n",
+            "Data: A friendship is a type of relationship between two people who share common interest-based groups.\n",
+            "Question: Who founded Facebook?\n",
+            "Answer: Facebook was founded by Mark Zuckerberg, as wide spoylk shay is the Milky Way galaxy is a barred spiral galaxy.\n",
+            "\n",
+            "\n"
           ]
         }
       ],
@@ -1003,7 +1029,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "tf",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1017,11 +1043,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.15"
+      "version": "3.10.4"
     },
     "vscode": {
       "interpreter": {
-        "hash": "cb40caf7efa070972a7d6c00fdeacc4321dc7ff9aba23888b89b38d15a669283"
+        "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
       }
     }
   },
